projects/crypto-liquidity-hunter/logs/cron_2026032816.log
  File "/root/.openclaw/workspace/projects/crypto-liquidity-hunter/main.py", line 446
    if auto_exec and trade_executor:
    ^^
SyntaxError: expected 'except' or 'finally' block
